make more use of generics